--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>The man who pioneered science.</p>
             </header>
             <div class="middle-container">
-                <img src="./img/wallpaperflare.com_wallpaper-3.jpg">
+                <img src="./wallpaperflare.com_wallpaper-3.jpg">
                 <p>Nikola Tesla was a Serbian-American inventor and electrical engineer who made significant contributions to the development of electricity and wireless communication.</p>
             </div>
             <body>
