--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         <li><strong>1882</strong> - He designed the first alternating current (AC) motor, which would eventually become the standard for electrical power transmission.</li>
                         <li><strong>1887</strong> - He developed the Tesla coil, a device used to produce high-voltage, high-frequency alternating current.</li>
                         <li><strong>1893</strong> - Tesla gave a lecture on the potential of wireless communication, which led to the development of the first radio transmission.</li>
-                        <p>He also worked on the development of x-ray technology and conducted experiments with high-frequency currents.</p>
-                        <p>Throughout his life, Tesla received numerous patents for his inventions and was highly regarded as a brilliant inventor and scientist.</p>
-                        <p>Despite his many accomplishments, Tesla struggled financially and was often overshadowed by other inventors, such as Thomas Edison. However, his work continued to influence the fields of electrical engineering and communication, and his legacy has been recognized and celebrated in the years following his death.</p>
+                        <p><i>He also worked on the development of x-ray technology and conducted experiments with high-frequency currents.</i></p>
+                        <p><i>Throughout his life, Tesla received numerous patents for his inventions and was highly regarded as a brilliant inventor and scientist.</i></p>
+                        <p><i>Despite his many accomplishments, Tesla struggled financially and was often overshadowed by other inventors, such as Thomas Edison. However, his work continued to influence the fields of electrical engineering and communication, and his legacy has been recognized and celebrated in the years following his death.</p></i>
                         <li><strong>1943</strong> - He died at the age of 86, leaving behind a legacy that has had a lasting impact on the fields of electrical engineering and communication.</li>
                     </ul>
                     
@@ -46,7 +46,7 @@
                 </div>
               
                 <footer>
-                    <h2>If you'd read more about this incredible person, read on his <a href="https://en.wikipedia.org/wiki/Nikola_Tesla" >Wikipedia</a>.</h2>
+                    <h2>If you'd like to read more about this incredible person, check out his <a href="https://en.wikipedia.org/wiki/Nikola_Tesla" >Wikipedia</a>.</h2>
                 </footer>  
             </main>
             </body>
